[tool.poetry]
name = "pymed"
version = "0.1.0"
description = ""
authors = ["jeffreylandes <landesjeffrey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
